--- a/index.html
+++ b/index.html
@@ -157,19 +157,55 @@ shorter random strings:</p>
   <div>&nbsp;&nbsp;<span style="color: #F92672">return</span>&nbsp;string<span style="color: #999">({</span>&nbsp;length&nbsp;<span style="color: #999">})</span></div>
   <div><span style="color: #999">},</span>&nbsp;natural<span style="color: #999">({</span>&nbsp;max<span style="color: #999">:</span>&nbsp;<span style="color: #66D9EF; font-weight: bold">10</span>&nbsp;<span style="color: #999">}))</span></div>
   <div>&nbsp;</div>
-  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span></div>
-  <div>&nbsp;&nbsp;<span style="color: #999">[</span>&nbsp;<span style="color: #E6DB74">'(n25SSlGlh'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'H#ySk0Wbe'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'19*pan]n'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'wTMaFbv'</span>&nbsp;<span style="color: #999">]</span></div>
-  <div><span style="color: #999">)</span></div>
+  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #E6DB74">'(n25SSlGlh'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'H#ySk0Wbe'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'19*pan]n'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'wTMaFbv'</span></div>
+  <div><span style="color: #999">])</span></div>
   <div>&nbsp;</div>
-  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span></div>
-  <div>&nbsp;&nbsp;<span style="color: #999">[</span>&nbsp;<span style="color: #E6DB74">'Dkdv[B'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'Hg6To'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'M[RI'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'@SY'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'He'</span>&nbsp;<span style="color: #999">]</span></div>
-  <div><span style="color: #999">)</span></div>
+  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #E6DB74">'Dkdv[BrHg6'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'oCM[RId@S'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'mHea(*)P'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'CwbhrYr'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'YjTK9c'</span></div>
+  <div><span style="color: #999">])</span></div>
   <div>&nbsp;</div>
-  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[])</span></div>
+  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #E6DB74">'CtnX3xFMpO'</span></div>
+  <div><span style="color: #999">])</span></div>
   <div>&nbsp;</div>
-  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span></div>
-  <div>&nbsp;&nbsp;<span style="color: #999">[</span>&nbsp;<span style="color: #E6DB74">')'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">''</span>&nbsp;<span style="color: #999">]</span></div>
-  <div><span style="color: #999">)</span></div>
+  <div>expect<span style="color: #999">(</span>sequenceGenerator<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #E6DB74">'c)!5H*D%&amp;S'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'&amp;ygQoMd)y'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'C3uN9RA)'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'SOukv7m'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'b]F5Do'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'ab8o0'</span></div>
+  <div><span style="color: #999">])</span></div>
+</div><p>Generate random events based on a state machine.</p>
+<div class="code lang-javascript">
+  <div><span style="color: #F92672">let</span>&nbsp;<span style="color: #999">{</span>&nbsp;natural<span style="color: #999">,</span>&nbsp;pickone<span style="color: #999">,</span>&nbsp;sequence&nbsp;<span style="color: #999">}</span>&nbsp;<span style="color: #F92672">=</span>&nbsp;<span style="color: #F92672">new</span>&nbsp;Generators<span style="color: #999">(</span><span style="color: #66D9EF; font-weight: bold">42</span><span style="color: #999">)</span></div>
+  <div>const&nbsp;StateMachine&nbsp;<span style="color: #F92672">=</span>&nbsp;require<span style="color: #999">(</span><span style="color: #E6DB74">'javascript-state-machine'</span><span style="color: #999">)</span></div>
+  <div>&nbsp;</div>
+  <div>const&nbsp;createStateMachine&nbsp;<span style="color: #F92672">=</span>&nbsp;<span style="color: #999">()</span>&nbsp;<span style="color: #F92672">=&gt;</span>&nbsp;StateMachine<span style="color: #999">.</span>create<span style="color: #999">({</span></div>
+  <div>&nbsp;&nbsp;initial<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'green'</span><span style="color: #999">,</span></div>
+  <div>&nbsp;&nbsp;events<span style="color: #999">:</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #999">{</span>&nbsp;name<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'warn'</span><span style="color: #999">,</span>&nbsp;&nbsp;from<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'green'</span><span style="color: #999">,</span>&nbsp;&nbsp;to<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'yellow'</span>&nbsp;<span style="color: #999">},</span></div>
+  <div>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #999">{</span>&nbsp;name<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'panic'</span><span style="color: #999">,</span>&nbsp;from<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'yellow'</span><span style="color: #999">,</span>&nbsp;to<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'red'</span>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #999">},</span></div>
+  <div>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #999">{</span>&nbsp;name<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'calm'</span><span style="color: #999">,</span>&nbsp;&nbsp;from<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'red'</span><span style="color: #999">,</span>&nbsp;&nbsp;&nbsp;&nbsp;to<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'yellow'</span>&nbsp;<span style="color: #999">},</span></div>
+  <div>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #999">{</span>&nbsp;name<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'clear'</span><span style="color: #999">,</span>&nbsp;from<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'yellow'</span><span style="color: #999">,</span>&nbsp;to<span style="color: #999">:</span>&nbsp;<span style="color: #E6DB74">'green'</span>&nbsp;&nbsp;<span style="color: #999">}</span></div>
+  <div><span style="color: #999">]})</span></div>
+  <div>&nbsp;</div>
+  <div>const&nbsp;eventSequence&nbsp;<span style="color: #F92672">=</span>&nbsp;sequence<span style="color: #999">((</span>context<span style="color: #999">,</span>&nbsp;previous<span style="color: #999">)</span>&nbsp;<span style="color: #F92672">=&gt;</span>&nbsp;<span style="color: #999">{</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #F92672">if</span>&nbsp;<span style="color: #999">(</span>previous<span style="color: #999">)</span>&nbsp;<span style="color: #999">{</span></div>
+  <div>&nbsp;&nbsp;&nbsp;<span style="color: #888">&nbsp;//&nbsp;transition&nbsp;the&nbsp;state&nbsp;machine&nbsp;with&nbsp;the&nbsp;previously&nbsp;generated&nbsp;event</span></div>
+  <div>&nbsp;&nbsp;&nbsp;&nbsp;context<span style="color: #999">.</span>fsm<span style="color: #999">[</span>previous<span style="color: #999">]()</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #999">}</span>&nbsp;<span style="color: #F92672">else</span>&nbsp;<span style="color: #999">{</span></div>
+  <div>&nbsp;&nbsp;&nbsp;&nbsp;context<span style="color: #999">.</span>fsm&nbsp;<span style="color: #F92672">=</span>&nbsp;createStateMachine<span style="color: #999">()</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #999">}</span></div>
+  <div>&nbsp;<span style="color: #888">&nbsp;//&nbsp;find&nbsp;the&nbsp;possible&nbsp;transtions</span></div>
+  <div>&nbsp;&nbsp;const&nbsp;transitions&nbsp;<span style="color: #F92672">=</span>&nbsp;context<span style="color: #999">.</span>fsm<span style="color: #999">.</span>transitions<span style="color: #999">()</span></div>
+  <div>&nbsp;<span style="color: #888">&nbsp;//&nbsp;pick&nbsp;a&nbsp;random&nbsp;one.</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #F92672">return</span>&nbsp;pickone<span style="color: #999">(</span>transitions<span style="color: #999">)</span></div>
+  <div><span style="color: #999">},</span>&nbsp;natural<span style="color: #999">({</span>&nbsp;max<span style="color: #999">:</span>&nbsp;<span style="color: #66D9EF; font-weight: bold">10</span>&nbsp;<span style="color: #999">}))</span></div>
+  <div>&nbsp;</div>
+  <div>expect<span style="color: #999">(</span>eventSequence<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #E6DB74">'warn'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'clear'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'warn'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'clear'</span></div>
+  <div><span style="color: #999">])</span></div>
+  <div>&nbsp;</div>
+  <div>expect<span style="color: #999">(</span>eventSequence<span style="color: #999">(),</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #999">[</span></div>
+  <div>&nbsp;&nbsp;<span style="color: #E6DB74">'warn'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'clear'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'warn'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'panic'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'calm'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'panic'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'calm'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'panic'</span></div>
+  <div><span style="color: #999">])</span></div>
 </div><h2 id="mapping-generators">Mapping generators</h2>
 <p>All generators have a <code>map</code> method that can be used to map the stream of
 generated values into something else. A mapped generator supports shrinking by
@@ -187,7 +223,7 @@ is the generators instance.</p>
   <div>expect<span style="color: #999">(</span>nameAndEmail<span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'when&nbsp;called'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'Manuel&nbsp;Lyons&nbsp;ofosid@daej.co.uk'</span><span style="color: #999">)</span></div>
   <div>expect<span style="color: #999">(</span>nameAndEmail<span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'when&nbsp;called'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'to&nbsp;equal'</span><span style="color: #999">,</span>&nbsp;<span style="color: #E6DB74">'Nathaniel&nbsp;Parks&nbsp;ur@gafgohrak.com'</span><span style="color: #999">)</span></div>
 </div><h2 id="mit-license">MIT License</h2>
-<p>Copyright (c) 2016 Sune Simonsen <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#115;&#117;&#x6e;&#101;&#64;&#x77;&#x65;&#x2d;&#x6b;&#x6e;&#x6f;&#119;&#104;&#x6f;&#x77;&#46;&#x64;&#107;">&#115;&#117;&#x6e;&#101;&#64;&#x77;&#x65;&#x2d;&#x6b;&#x6e;&#x6f;&#119;&#104;&#x6f;&#x77;&#46;&#x64;&#107;</a></p>
+<p>Copyright (c) 2016 Sune Simonsen <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#x3a;&#x73;&#117;&#x6e;&#x65;&#64;&#119;&#101;&#45;&#107;&#x6e;&#x6f;&#x77;&#x68;&#x6f;&#119;&#x2e;&#x64;&#107;">&#x73;&#117;&#x6e;&#x65;&#64;&#119;&#101;&#45;&#107;&#x6e;&#x6f;&#x77;&#x68;&#x6f;&#119;&#x2e;&#x64;&#107;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
 &#39;Software&#39;), to deal in the Software without restriction, including
