--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ values.</p>
 <p>All important generators supports <a href="./api/iterator/#expand-value-">shrinking</a> and
 <a href="./api/iterator/#shrink-value-">expansion</a>.</p>
 <h2 id="mit-license">MIT License</h2>
-<p>Copyright (c) 2016 Sune Simonsen <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#115;&#x75;&#110;&#x65;&#x40;&#119;&#x65;&#45;&#x6b;&#x6e;&#111;&#119;&#x68;&#111;&#x77;&#46;&#100;&#107;">&#115;&#x75;&#110;&#x65;&#x40;&#119;&#x65;&#45;&#x6b;&#x6e;&#111;&#119;&#x68;&#111;&#x77;&#46;&#100;&#107;</a></p>
+<p>Copyright (c) 2016 Sune Simonsen <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#111;&#x3a;&#x73;&#117;&#110;&#101;&#64;&#x77;&#x65;&#x2d;&#107;&#x6e;&#111;&#x77;&#104;&#111;&#119;&#46;&#x64;&#x6b;">&#x73;&#117;&#110;&#101;&#64;&#x77;&#x65;&#x2d;&#107;&#x6e;&#111;&#x77;&#104;&#111;&#119;&#46;&#x64;&#x6b;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
 &#39;Software&#39;), to deal in the Software without restriction, including
