--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ values.</p>
 <p>All important generators supports <a href="./api/iterator/#expand-value-">shrinking</a> and
 <a href="./api/iterator/#shrink-value-">expansion</a>.</p>
 <h2 id="mit-license">MIT License</h2>
-<p>Copyright (c) 2016 Sune Simonsen <a href="&#x6d;&#x61;&#105;&#108;&#x74;&#111;&#58;&#115;&#117;&#x6e;&#x65;&#x40;&#x77;&#101;&#x2d;&#x6b;&#x6e;&#111;&#x77;&#x68;&#x6f;&#119;&#46;&#100;&#x6b;">&#115;&#117;&#x6e;&#x65;&#x40;&#x77;&#101;&#x2d;&#x6b;&#x6e;&#111;&#x77;&#x68;&#x6f;&#119;&#46;&#100;&#x6b;</a></p>
+<p>Copyright (c) 2016 Sune Simonsen <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#115;&#x75;&#110;&#101;&#x40;&#x77;&#x65;&#45;&#x6b;&#110;&#x6f;&#119;&#104;&#x6f;&#119;&#x2e;&#x64;&#107;">&#115;&#x75;&#110;&#101;&#x40;&#x77;&#x65;&#45;&#x6b;&#110;&#x6f;&#119;&#104;&#x6f;&#119;&#x2e;&#x64;&#107;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
 &#39;Software&#39;), to deal in the Software without restriction, including
