--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ values.</p>
 <p>All important generators supports <a href="./api/iterator/#expand-value-">shrinking</a> and
 <a href="./api/iterator/#shrink-value-">expansion</a>.</p>
 <h2 id="mit-license">MIT License</h2>
-<p>Copyright (c) 2016 Sune Simonsen <a href="&#x6d;&#x61;&#105;&#108;&#116;&#x6f;&#x3a;&#115;&#117;&#x6e;&#101;&#64;&#119;&#x65;&#45;&#107;&#110;&#111;&#119;&#x68;&#111;&#119;&#46;&#x64;&#107;">&#115;&#117;&#x6e;&#101;&#64;&#119;&#x65;&#45;&#107;&#110;&#111;&#119;&#x68;&#111;&#119;&#46;&#x64;&#107;</a></p>
+<p>Copyright (c) 2016 Sune Simonsen <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x6e;&#x65;&#64;&#x77;&#101;&#45;&#107;&#x6e;&#111;&#119;&#x68;&#111;&#119;&#x2e;&#x64;&#107;">&#115;&#x75;&#x6e;&#x65;&#64;&#x77;&#101;&#45;&#107;&#x6e;&#111;&#119;&#x68;&#111;&#119;&#x2e;&#x64;&#107;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
 &#39;Software&#39;), to deal in the Software without restriction, including
